tests/basic/infer/not_neg/070.pan.out
tests/basic/infer/not_neg/070.pan:4:1-4: error: cannot solve constraints of f70