tests/basic/infer/not_neg/070.pan
not : (x:bool) -> {y:bool|y = ~x}
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f70 = let b = not true in assert b


